--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -34,7 +34,7 @@ ul {
 
 @media only screen and (max-width: 771px) {
   .skillContainer {
-    /* flex-direction: column; */
+    flex-direction: column;
   }
 }
 
